# nasdaq-market-data-elt

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: nasdaq_market_data_dag.py
config/: nasdaq100_symbols.csv
docs/: snowflake_setup.md
sql/snowflake/: build_gold.sql  schema.sql
src/nasdaq_elt/: __init__.py  alpha_vantage.py  config.py  db.py  pipeline.py  quality.py  transform.py
tests/: conftest.py  test_airflow_dag.py  test_alpha_vantage.py  test_snowflake_config.py  test_snowflake_integration.py  test_sql_assets.py  test_transform.py
tests/fixtures/: alpha_vantage_daily_aapl.json
